tests/ui/type-alias-impl-trait/underconstrained_generic.stderr
error[E0277]: the trait `ProofForConversion<T>` is not implemented for `()`
  --> $DIR/underconstrained_generic.rs:22:5
   |
LL |     ()
   |     ^^ the trait `ProofForConversion<T>` is not implemented for `()`, which is required by `(): ProofForConversion<T>`
   |
note: required for `()` to implement `ProofForConversion<T>`
  --> $DIR/underconstrained_generic.rs:13:16
   |
LL | impl<X: Trait> ProofForConversion<X> for () {
   |         -----  ^^^^^^^^^^^^^^^^^^^^^     ^^
   |         |
   |         unsatisfied trait bound introduced here
help: consider extending the `where` clause, but there might be an alternative better way to express this requirement
   |
LL | type Converter<T> = impl ProofForConversion<T> (): ProofForConversion<T>;
   |                                                +++++++++++++++++++++++++

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0277`.
